# gpttrans

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.json
src/: config.rs  logger.rs  main.rs  ui.rs
