[package]
name = "gpttrans"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard-win = "5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading"
] }
winrt-notification = "0.5"
once_cell = "1"
anyhow = "1"
tray-icon = "0.11"
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui = "0.27"
crossbeam-channel = "0.5"
futures-util = "0.3"
